Military grade security protocol has implemented
because OP is lazy af

--- a/PippinGPT Gemini code.html
+++ b/PippinGPT Gemini code.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body class="bg-white font-sans text-gray-800 antialiased">
-
+    <h1>MILITARY GRADE SECURITY PROTOCOL IMPLEMENTED</h1>
     <nav class="flex justify-between items-center p-6 max-w-7xl mx-auto">
         <div class="flex items-center">
             <img src="./Pippin1.png" alt="Pippin Logo" class="h-10 w-auto mr-3">
@@ -204,4 +204,5 @@
         });
     </script>
 </body>
+
 </html>
